Fix : Footer grid속성 row 변경 및 gap 추가

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -247,7 +247,8 @@ footer .company {
   footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 15px 0;
     padding: 0;
   }
   footer .company {
